--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "flow-bin": "^0.46.0",
     "husky": "^0.13.3",
     "jest": "^20.0.3",
+    "nodemon": "^1.11.0",
     "pm2": "^2.4.6",
     "rimraf": "^2.6.1"
   },
