--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,8 @@
   ],
   "rules": {
     "semi": [2, "never"],
+    "indent": [2, "tab"],
+    "no-tabs": 0,
     "no-unexpected-multiline": 2,
     "compat/compat": 2
   },
