--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "flow": "^0.2.3",
-    "mongoose": "^4.10.4"
+    "mongoose": "^4.10.4",
+    "passport": "^0.3.2",
+    "passport-twitter": "^1.0.4"
   }
 }
