--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "flow": "^0.2.3",
     "mongoose": "^4.10.4",
     "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
     "passport-twitter": "^1.0.4"
   }
 }
